# soulmemory-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  publish.bat  rust-toolchain.toml
.github/workflows/: build.yml
launcher/: Cargo.toml
launcher/src/: main.rs
soulmemory-rs/: Cargo.toml
soulmemory-rs/src/: app.rs  lib.rs  render_hooks.rs
soulmemory-rs/src/games/: armored_core_6.rs  dark_souls_3.rs  dark_souls_prepare_to_die_edition.rs  dark_souls_remastered.rs  elden_ring.rs  mock_game.rs  mod.rs  prepare_to_die_edition.rs  remastered.rs  sekiro.rs
soulmemory-rs/src/games/dark_souls_2_scholar_of_the_first_sin/: buffered_event_flags.rs  mod.rs
soulmemory-rs/src/games/dark_souls_2_vanilla/: buffered_event_flags.rs  mod.rs
soulmemory-rs/src/games/mock_game/: buffered_event_flags.rs  mod.rs
soulmemory-rs/src/games/traits/: game.rs  game_ext.rs  mod.rs
soulmemory-rs/src/gui/: ai_toggle.rs  ai_toggle_widget.rs  basic_position_widget.rs  chr_dbg_flags_widget.rs  event_flag_widget.rs  event_flags.rs  misc_widget.rs  mod.rs  render_hooks.rs  sekiro_chr_dbg_flags_widget.rs  widget.rs
soulmemory-rs/src/server/: webserver.rs
soulmemory-rs/src/tas/: tas.rs
soulmemory-rs/src/util/: console.rs  log.rs  mod.rs
soulmemory-rs/src/widgets/: ai_toggle_widget.rs  basic_position_widget.rs  chr_dbg_flags_widget.rs  event_flag_widget.rs  misc_widget.rs  mod.rs  sleep_widget.rs  widget.rs
test-window/: Cargo.toml
test-window/src/: main.rs
test-window/src/support/: mod.rs
