[package]
name = "test-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.8"
glium = { version = "0.34.0", default-features = true, features = ["glutin_backend"] }
image = "0.23"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"

winit = { version = "0.29.3", default-features = false }

soulmemory-rs = { path = "../soulmemory-rs" }

# Pin indirect dependency scoped-tls to 1.0.0
# as 1.0.1 bumped MSRV to 1.59
# Used only in
# imgui-examples -> glium -> glutin -> wayland-client -> scoped-tls
# so not worth bumping MSRV for this basically to keep CI happy
# FIXME: Remove this for imgui-rs v0.10 and bump MSRV
scoped-tls = "=1.0.0"
